# GIAS-ESP-IDF

./: CMakeLists.txt
main/: CMakeLists.txt  ReadMe.md  audio_recorder.c  audio_recorder.h  calendar.c  calendar.h  gias.c  gias.h  led_control.c  led_control.h  main.c  rtc_updater.c  rtc_updater.h  sd_mmc.c  sd_mmc.h
